Fix flickering when mouse moves from projects to dropdown in navbar

--- a/src/styles.css
+++ b/src/styles.css
@@ -463,6 +463,7 @@ canvas {
 .nav-area {
   position: fixed;
   width: 100%;
+  box-sizing: border-box;
   height: var(--nav-height);
   left: 0;
   top: 0;
@@ -472,7 +473,7 @@ canvas {
   align-items: center;
   backdrop-filter: blur(24px);
   background-color: var(--bg-color-2);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.08);
+  box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.08);
   visibility: hidden;
   opacity: 0;
   animation: fadeInCustom 1s ease forwards;
@@ -542,11 +543,10 @@ canvas {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  top: calc(var(--nav-height) - 2px);
+  top: var(--nav-height);
   height: calc(100vh - var(--nav-height));
   left: 0;
   width: 100%;
-  overflow: auto;
   transition-duration: 0.25s;
   background: var(--bg-color-2);
   visibility: hidden;
@@ -832,7 +832,6 @@ footer {
   }
 
   .nav-area {
-    height: 3em;
     justify-content: center;
     width: 100%;
   }
